# MOISSCode

./: .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.py  pyproject.toml  requirements.txt  run_moiss.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-docs.yml
deployment/: Dockerfile.api  docker-compose.yml
docs/: Deployment_Guide.md  MOISSCode_Manual.md  index.md
docs/getting-started/: installation.md
docs/guides/: building-apps.md
docs/reference/: stdlib.md
examples/: abx_stewardship.moiss  custom_app.py  diabetes_cgm.moiss  drug_discovery.moiss  full_test.moiss  icu_admission.moiss  outbreak_response.moiss  phase2_demo.moiss  phase3_demo.moiss  pk_workflow.moiss  sepsis_workup.moiss
examples/notebooks/: 01_lab_interpretation.ipynb  02_pk_simulation.ipynb  03_moiss_classification.ipynb  04_sepsis_screening.ipynb
moisscode/: __init__.py  ast_nodes.py  cli.py  exceptions.py  interpreter.py  lexer.py  parser.py  stdlib.py  typesystem.py  version.py
moisscode/api/: __init__.py  auth.py  config.py  models.py  server.py
moisscode/modules/: __init__.py  med_biochem.py  med_chem.py  med_db.py  med_epi.py  med_fhir.py  med_finance.py  med_genomics.py  med_glucose.py  med_icd.py  med_io.py  med_lab.py  med_micro.py  med_nutrition.py  med_papers.py  med_pk.py  med_research.py  med_scores.py  med_signal.py
tests/: test_biochem.py  test_chem.py  test_epi.py  test_fhir.py  test_finance.py  test_glucose.py  test_icd.py  test_interpreter.py  test_lab.py  test_lexer.py  test_micro.py  test_nutrition.py  test_parser.py  test_pk.py  test_scores.py  test_signal.py  test_stdlib.py  test_units.py
www/: docusaurus.config.js  package-lock.json  sidebars.js
www/docs/: cli.md  deployment.md  getting-started.md  language-guide.md  python-sdk.md
www/src/pages/: index.js
