[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moisscode"
dynamic = ["version"]
description = "Multi Organ Intervention State Space Code — a domain-specific language for clinical decision support and biotech workflow automation."
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
authors = [
    {name = "Aethryva Deeptech"}
]
keywords = ["medical", "dsl", "clinical", "biotech", "pharmacokinetics", "FHIR"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.23"]
dev = ["pytest>=7.0"]

[project.scripts]
moiss = "moisscode.cli:main"

[tool.setuptools.dynamic]
version = {attr = "moisscode.version.__version__"}

[tool.setuptools.packages.find]
include = ["moisscode*"]
