[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moisscode"
dynamic = ["version"]
description = "Multi Organ Intervention State Space Code — a domain-specific language for clinical decision support and biotech workflow automation."
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
authors = [
    {name = "Aethryva Deeptech", email = "nikhil@aethryva.com"}
]
keywords = ["medical", "dsl", "clinical", "biotech", "pharmacokinetics", "FHIR", "decision-support", "healthcare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://moisscode.com"
Repository = "https://github.com/aethryva/MOISSCode"
Documentation = "https://moisscode.com/docs/getting-started"
Issues = "https://github.com/aethryva/MOISSCode/issues"

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.23"]
dev = ["pytest>=7.0"]

[project.scripts]
moiss = "moisscode.cli:main"

[tool.setuptools.dynamic]
version = {attr = "moisscode.version.__version__"}

[tool.setuptools.packages.find]
include = ["moisscode*"]
exclude = ["moisscode-site*"]

[tool.setuptools.package-data]
moisscode = ["py.typed"]
